BEM first steps

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Studio</title>
   <link rel="stylesheet" href="./css/modern-normalize.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/main.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -18,18 +18,18 @@
   <!-- HEADER -->
   <header class="header">
     <div class="container">
-      <a class="web-studio-link-header" href="./index.html"> <span class="blue-text">Web</span><span
-          class="black-text">Studio</span> </a>
+      <a class="logo logo__header" href="./index.html"> <span class="logo__text">Web</span><span
+          class="logo__text--light-theme">Studio</span> </a>
 
-      <nav class="navigation">
-        <ul class="nav-links">
-          <li class="navigation-item">
-            <a class="navigation-item-link" href="./index.html">Agencja</a>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link--active" href="./index.html">Agencja</a>
           </li>
-          <li class="navigation-item">
+          <li class="nav__item">
             <a href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="navigation-item">
+          <li class="nav__item">
             <a href="#">Kontakt</a>
           </li>
         </ul>
@@ -391,8 +391,8 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-main">
-        <a class="web-studio-link-footer" href="./index.html"> <span class="blue-text">Web</span><span
-            class="white-text">Studio</span> </a>
+        <a class="logo logo__footer" href="./index.html"> <span class="logo__text">Web</span><span
+            class="logo__text--dark-theme">Studio</span> </a>
         <address>
           <ul class="footer-address-list">
             <li class="footer-address-list-item">
